# pcmanfm

data/: Makefile.am  org.semplice-linux.pkexec.pcmanfm.policy
debian/: changelog  control  copyright  rules
debian/patches/: 01_add_open_as_root.patch  02_drop_desktop_pref_launcher.patch  series  series.in
src/: main-win-ui.c  main-win.c  pcmanfm.c  pcmanfm.h
